force-app/main/default/objects/Checklist_Item__c/Checklist_Item__c.object-meta.xml
<CustomObject>
    <description>Tracks the checklist items for the due diligence package in the Site Divestiture Program.</description>
    <label>Checklist Item</label>
    <nameField>
        <displayFormat>CL-{0}</displayFormat>
        <label>Checklist Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>