force-app/main/default/objects/Checklist_Item__c/fields/B_1_Comments__c.field-meta.xml
<CustomField>
    <fullName>B_1_Comments__c</fullName>
    <label>B-1 Comments</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Forced Relocation</fullName>
            </value>
            <value>
                <fullName>Waiver of Conf Requested</fullName>
            </value>
            <value>
                <fullName>Lease expires &lt;180 days</fullName>
            </value>
            <value>
                <fullName>Lease non-renewed, expires &lt;180 days</fullName>
            </value>
            <value>
                <fullName>Lease in Holdover</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>