force-app/main/default/objects/Checklist_Item__c/fields/Checkbox_2__c.field-meta.xml
<CustomField>
    <fullName>Checkbox_2__c</fullName>
    <formula>IF( TEXT(Document_s_Available_in_eletronic_form__c) = &quot;Y&quot;,
&quot;X&quot;,
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Auto Checked when the Documents Available in Electronic Form is entered.</inlineHelpText>
    <label>Document Checkbox</label>
    <type>Text</type>
</CustomField>