force-app/main/default/objects/Checklist_Item__c/fields/Comments_optional__c.field-meta.xml
<CustomField>
    <fullName>Comments_optional__c</fullName>
    <label>Comments (optional)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>