force-app/main/default/objects/Checklist_Item__c/fields/Document_s_Available_in_eletronic_form__c.field-meta.xml
<CustomField>
    <fullName>Document_s_Available_in_eletronic_form__c</fullName>
    <inlineHelpText>Please review documents as there may be multiple (checkbox indicates there is a document available)</inlineHelpText>
    <label>Document Available in electronic form?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>