force-app/main/default/objects/Checklist_Item__c/fields/Due_Diligence_Package__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence_Package__c</fullName>
    <label>Due Diligence Package</label>
    <referenceTo>Due_Diligence_Package__c</referenceTo>
    <relationshipLabel>Checklist Items</relationshipLabel>
    <relationshipName>Checklist_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>