force-app/main/default/objects/Checklist_Item__c/fields/Exclude_From_Summary__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_Summary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude From Summary</label>
    <type>Checkbox</type>
</CustomField>