force-app/main/default/objects/Checklist_Item__c/validationRules/B_1_Checklist_Items_only.validationRule-meta.xml
<ValidationRule>
    <fullName>B_1_Checklist_Items_only</fullName>
    <active>true</active>
    <description>This field can only be updaed for item B-1</description>
    <errorConditionFormula>AND(ISCHANGED( B_1_Comments__c ),
 NOT(CONTAINS( Description__c , &quot;B-1&quot;)))</errorConditionFormula>
    <errorDisplayField>B_1_Comments__c</errorDisplayField>
    <errorMessage>This can only be entered for checklist item B-1.</errorMessage>
</ValidationRule>