force-app/main/default/objects/Checklist_Item__c/validationRules/Description_Limit_edits.validationRule-meta.xml
<ValidationRule>
    <fullName>Description_Limit_edits</fullName>
    <active>true</active>
    <description>Prevents edits to the description unless it is one of the 6 that are allowed to be editable.</description>
    <errorConditionFormula>And(ISCHANGED( Description__c ),
 Sort_Order__c  &lt;&gt;10,Sort_Order__c  &lt;&gt;11,Sort_Order__c  &lt;&gt;12,Sort_Order__c  &lt;&gt;23,Sort_Order__c  &lt;&gt;24,Sort_Order__c  &lt;&gt; 25)</errorConditionFormula>
    <errorDisplayField>Description__c</errorDisplayField>
    <errorMessage>Description cannot be changed for this checklist item.</errorMessage>
</ValidationRule>